# time_system_bot

./: .env.example  .gitignore  PLAN.md  PROJECT_DESCRIPTION.md  README.md  main.py  pyproject.toml
schemas/: message_classification.json  task_entry.json  time_entry.json
src/time_bot/: __init__.py  cli.py  config.py  logging_utils.py  models.py  note_builder.py  note_renderer.py  obsidian_writer.py  pipeline.py  sgr_client.py  stats.py  task_reader.py  time_utils.py  version.py
src/time_bot/bot/: handlers.py  main.py  utils.py
src/time_bot/food_tracker/: __init__.py  app.py  config.py  integration.py  logging_setup.py
src/time_bot/food_tracker/domain/: models.py  normalize.py
src/time_bot/food_tracker/fsm/: states.py
src/time_bot/food_tracker/handlers/: add_food.py  breath.py  common.py  condition.py  photo.py  start.py
src/time_bot/food_tracker/services/: breath_reminder_service.py  breath_scheduler.py  composition_extractor.py  condition_service.py  file_store.py  food_event_service.py  foods_service.py  markdown_helpers.py  photo_intake.py  time_service.py
src/time_bot/food_tracker/ui/: callbacks.py  keyboards.py
src/time_system_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_pipeline_classification.py  test_placeholder.py  test_sgr_client_utils.py  test_sgr_integration.py  test_sgr_schema.py  test_task_reader.py
tests/data/: time_messages_samples.jsonl
